tests/errors/type_check/build/env_build_struct_enum_name_clash.sim

        struct N { x: i64 }
        enum N { A: i64 }
        